--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,14 @@ dependencies:
   carousel_slider: ^4.1.1
   image_picker:
   font_awesome_flutter: ^10.2.1
-  flutter_tflite: ^1.0.1
+  flutter_tflite: 
+  firebase_auth: ^4.4.0
+  firebase_core: ^2.9.0
+  google_sign_in: ^6.1.0
+  cloud_firestore: ^4.5.0
+  provider: ^6.0.5
+  shared_preferences: ^2.1.0
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +58,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: 
+flutter_icons:
+  image_path: "assets/icon/app_icon.png" 
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,7 +80,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-  - assets/
+    - assets/
+    - assets/images/
+    - assets/model/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
