--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.0
   lottie: ^2.3.2
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
